syntax = "proto3";

option csharp_namespace = "Bff.Web.Grpc";

package BasketApi;

service GrpcBasket {
	rpc GetBasketById(BasketRequest) returns (CustomerBasketResponse) {}
	rpc UpdateBasket(CustomerBasketRequest) returns (CustomerBasketResponse) {}
}

message BasketRequest {
	string id = 1;
}

message CustomerBasketRequest {
	string buyer_id = 1;
	repeated CustomerBasketItem items = 5;
}

message CustomerBasketResponse {
	string buyer_id = 1;
	repeated CustomerBasketItem items = 5;
}

message CustomerBasketItem {
	string id = 1;
	int32 product_id = 5;
	string product_name = 10;
	double unit_price = 15;
	double old_unit_price = 20;
	int32 quantity = 25;
	string picture_url = 30;
}
