syntax = "proto3";

option csharp_namespace = "Bff.Web.Grpc";

package OrderingApi;

service GrpcOrdering {
	rpc CreateOrderDraft(CreateOrderDraftRequest) returns (OrderDraftDTO) {}
}

message CreateOrderDraftRequest {
	string buyer_id = 1;
    repeated BasketItemDTO items = 5;
}

message BasketItemDTO {
    string id = 1;
    int32 product_id = 5;
    string product_name = 10;
    double unit_price = 15;
    double old_unit_price = 20;
    int32 quantity = 25;
    string picture_url = 30;
}

message OrderDraftDTO {
    double total = 1;
    repeated OrderItemDTO order_items = 5;
}
message OrderItemDTO {
    int32 product_id = 1;
    string product_name = 5;
    double unit_price = 10;
    double discount = 15;
    int32 units = 20;
    string picture_url = 25;
}

